5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3119/executions/1680_2195.log
== TEST (2019-04-30 17:33:04) 
-- CODE:
data = int(input("Digite a data: "))

mes = data % 10 
-- OUTPUT:
5
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:33:10) 
-- CODE:
data = int(input("Digite a data: "))

mes = data % 10 
print(mes)
-- OUTPUT:
5
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:33:32) 
-- CODE:
data = int(input("Digite a data: "))

mes = data % 2 
print(mes)
-- OUTPUT:
5
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:33:52) 
-- CODE:
data = int(input("Digite a data: "))

mes = data % 08 
print(mes)
-- ERROR:
File "XXXX", line 3
    mes = data % 08 
                  ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:33:55) 
-- CODE:
data = int(input("Digite a data: "))

mes = data % 8 
print(mes)
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:34:11) 
-- CODE:
data = int(input("Digite a data: "))

mes = 8 % data 
print(mes)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:34:22) 
-- CODE:
data = int(input("Digite a data: "))

mes = 10 % data 
print(mes)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:34:34) 
-- CODE:
data = int(input("Digite a data: "))

mes = 100 % data 
print(mes)
-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:35:20) 
-- CODE:
data = int(input("Digite a data: "))

mes = data%data 
print(mes)
-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:35:36) 
-- CODE:
data = int(input("Digite a data: "))

mes = 10%data 
print(mes)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:35:57) 
-- CODE:
data = int(input("Digite a data: "))

mes = 31%data 
print(mes)
-- OUTPUT:
31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:36:07) 
-- CODE:
data = int(input("Digite a data: "))

mes = 31%data 
print(mes)
-- OUTPUT:
31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
